# sentinel-edge-ai

./: CMakeLists.txt  README.md
configs/: node_config.json
docs/: API.md  HARDWARE_SETUP.md
scripts/: deploy.sh  setup.sh
src/core/: config_manager.cpp  sentinel_core.cpp  sentinel_core.h
src/network/: lora_mesh.cpp  lora_mesh.h
src/sensors/: mq2_sensor.cpp  mq2_sensor.h  sensor_interface.cpp  sensor_interface.h
src/utils/: logger.cpp  logger.h
src/vision/: smoke_detector.cpp  smoke_detector.h  tflite_inference.cpp
